--- a/play.html
+++ b/play.html
@@ -100,6 +100,6 @@
 
   <script src="js/config.js"></script>
   <script src="js/storage.js"></script>
-<script src="js/play.js?v=final_drag_20260220"></script>
+<script src="js/play.js?v=final_2026script>
 </body>
 </html>
