--- a/play.html
+++ b/play.html
@@ -109,6 +109,6 @@
 
   <script src="js/config.js"></script>
   <script src="js/storage.js"></script>
-  <script src="js/play.js"></script>
+  <script src="js/play-tile.js?v=20260220"></script>
 </body>
 </html>
