--- a/play.html
+++ b/play.html
@@ -48,6 +48,16 @@
             </div>
           </div>
 
+          <div class="row">
+              <label class="toggle">
+              <input type="checkbox" id="toggleDrag" checked>
+                Bật kéo-thả
+              </label>
+          </div>
+        <div class="note">
+      <b>Cảm ứng:</b> Chạm 1 ô để đặt/đổi. Bật “kéo-thả” để kéo mảnh từ ô này sang ô khác (swap).
+    </div>
+
           <div class="panel mobilePad">
             <div class="panelTitle">Nút (Mobile)</div>
             <div class="pad">
