--- a/play.html
+++ b/play.html
@@ -47,10 +47,6 @@
             </div>
 
             <div class="row" style="margin-top:10px">
-              <label class="toggle">
-                <input type="checkbox" id="toggleDrag" checked>
-                Bật kéo-thả
-              </label>
             </div>
 
             <div class="note">
@@ -104,6 +100,6 @@
 
   <script src="js/config.js"></script>
   <script src="js/storage.js"></script>
-  <script src="js/play.js?v=20260220_puzzle"></script>
+  <script src="js/play.js?v=20260220_dragfx"></script>
 </body>
 </html>
