--- a/play.html
+++ b/play.html
@@ -100,6 +100,6 @@
 
   <script src="js/config.js"></script>
   <script src="js/storage.js"></script>
-  <script src="js/play.js?v=20260220_dragfx"></script>
+  <script src="js/play.js?v=20260220_drag"></script>
 </body>
 </html>
